# game.libretro.2048

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/2048/: 2048.txt  CMakeLists.txt
depends/windows/2048/: CMakeLists.txt
game.libretro.2048/: addon.xml  addon.xml.in
game.libretro.2048/resources/: buttonmap.xml
